ui:fix hidden context menu in job summary
With only one table entry the context menu couldn't
render fully (it was being truncated), so this change
applies a min-height to the tbody to ensure than even
when there is only one table entry, the context menu
will be visible

--- a/react/app/src/app.scss
+++ b/react/app/src/app.scss
@@ -73,6 +73,7 @@ margin: 0 0 0 0;}
   width:100%;
   display: block;
   height: auto;
+  min-height: 130px;
   overflow:auto;
 }
 .job_table thead tr {
